--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "firebase": "^12.4.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
@@ -53,9 +54,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.55.0",
     "react-resizable-panels": "^0.0.55",
+    "react-router-dom": "^7.9.4",
     "recharts": "^2.8.0",
     "sonner": "2.0.3",
     "tailwind-merge": "^1.14.0",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.0",
     "zod": "^3.22.2"
   },
