--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "test:ci": "jest --runInBand --ci --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -64,6 +65,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0-alpha.25",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -74,10 +78,15 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.0.2",
+    "util": "^0.12.5",
     "vite": "^7.1.7"
   },
   "engines": {
