--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "test": "jest",
     "test:ci": "jest --runInBand --ci --coverage"
   },
+    "jest-junit": {
+    "outputDirectory": ".",
+    "outputName": "junit.xml"
+  },
+
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -81,6 +86,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jest-junit": "^16.0.0",
     "node-fetch": "^2.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
@@ -103,4 +109,6 @@
   ],
   "author": "Vanderbilt University Career Center",
   "license": "MIT"
+
+  
 }
