--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -7,10 +7,6 @@ runConfig:
   # cpu: 1
   # memoryMiB: 512
 
-# Environment variables and secrets.
-# See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment
-env:
-  - variable: GOOGLE_NODE_RUN_SCRIPTS
-    value: ""
-    availability:
-      - BUILD
+# Skip Firebase build step.
+build:
+  skip: true
