clean up files for build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,12 @@
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": [
+    "vite.config.ts",
+    "vite.config.*",
+    "vite.config.d.ts",
+    "node_modules",
+    "dist"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
