added pins on reviewer side (need to fix zoom/scroll issue)

--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.449",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.55.0",
+    "react-pdf": "^10.2.0",
     "react-resizable-panels": "^0.0.55",
     "react-router-dom": "^7.9.4",
     "recharts": "^2.8.0",
